# GammaCorrector

./: .gitmodules  CMakeLists.txt  checkboxheaderview.cpp  checkboxheaderview.h  mainwindow.cpp  mainwindow.h  mainwindow_ui.cpp  mainwindow_ui.h  setup_script.iss  tablewidget.cpp  tablewidget.h  utils.cpp  utils.h
lib/qwt-6.3.0/: CMakeLists.txt  qwt.pri
src/: application.cpp  application.h  logger.cpp  logger.h  main.cpp  temperaturetransformer.cpp  utils.cpp  utils.h
src/data/: approximateplotprocessor.cpp  approximateplotprocessor.h  temperatureplotprocessor.cpp  temperatureplotprocessor.h  temperaturetransformer.h
src/monitor_plot/: curve.cpp  curve.h  grid.h  legend.h  movedmarker.cpp  movedmarker.h  plot.cpp  plot.h
src/ui/: approximateplotsettingswidget_ui.cpp  approximateplotsettingswidget_ui.h  approximateplotwidget_ui.cpp  approximateplotwidget_ui.h  approximatetabwidget_ui.cpp  approximatetabwidget_ui.h  gammacorrectiontabwidget_ui.cpp  gammacorrectiontabwidget_ui.h  mainwindow_ui.cpp  mainwindow_ui.h  settingswindow_ui.cpp  settingswindow_ui.h  temperatureplotsettingswidget_ui.cpp  temperatureplotsettingswidget_ui.h  temperatureplotwidget_ui.cpp  temperatureplotwidget_ui.h
src/widgets/: aboutdialog.cpp  aboutdialog.h  abstracttabwidget.cpp  abstracttabwidget.h  approximateplotwidget.cpp  approximateplotwidget.h  approximatetabwidget.cpp  approximatetabwidget.h  aspectratiocontainerwidget.cpp  aspectratiocontainerwidget.h  dockwidget.cpp  dockwidget.h  equationlabel.h  equationtextedit.cpp  equationtextedit.h  filemenu.cpp  filemenu.h  filterwidthcombobox.cpp  filterwidthcombobox.h  gammacorrectionorderdoublespinbox.cpp  gammacorrectiontabwidget.cpp  gammacorrectiontabwidget.h  mainwindow.cpp  mainwindow.h  menubar.cpp  menubar.h  polynomialordercombobox.cpp  polynomialordercombobox.h  settingswindow.cpp  settingswindow.h  splitter.cpp  splitter.h  statisticstextedit.cpp  statisticstextedit.h  statusbar.h  subwindowwidget.cpp  tabwidget.cpp  tabwidget.h  temperaturedoublespinbox.h  toolbar.cpp  (+1 more)
src/widgets/approximate_plot_window/: approximateplotsettingswidget.cpp  approximateplotsettingswidget.h  approximateplotwidget.cpp  approximateplotwidget.h  filterwidthcombobox.cpp  polynomialordercombobox.cpp  polynomialordercombobox.h  temperaturedoublespinbox.cpp
src/widgets/approximated_plot_window/: approximateplotwidget.cpp  gammacorrectionorderdoublespinbox.cpp  gammacorrectionorderdoublespinbox.h  polynomialordercombobox.cpp  settingswindow.cpp  settingswindow.h  temperaturedoublespinbox.cpp
src/widgets/main_window/: dockwidget.cpp  dockwidget.h  equationlabel.cpp  mainwindow.cpp  mainwindow.h  statusbar.cpp  toolbar.cpp  toolbar.h
src/widgets/main_window/mdi_area/: mdiarea.cpp  mdiarea.h  mdisubwindow.cpp  mdisubwindow.h  subwindowwidget.h
src/widgets/main_window/menu_bar/: aboutmenu.cpp  aboutmenu.h  filemenu.h  menubar.cpp  menubar.h  viewmenu.cpp  viewmenu.h
src/widgets/main_window/status_bar/: equationlabel.cpp  equationlabel.h
src/widgets/mdi_area/: mdiarea.cpp  mdisubwindow.cpp
src/widgets/plot/: curve.cpp  legend.cpp  legend.h  logarithmicplot.cpp  logarithmicplot.h  movedmarker.cpp  movedmarker.h  offsetplot.cpp  offsetplot.h  offsetplotscaledraw.h  plot.cpp  plot.h
src/widgets/plot_3d/: plot3d.cpp  plot3d.h
src/widgets/table_widget/: checkboxheaderview.cpp  checkboxheaderview.h  doublespinboxdelegate.cpp  doublespinboxdelegate.h  tablewidget.cpp  tablewidget.h  tablewidgetitem.cpp  tablewidgetitem.h
src/widgets/temperature_plot_window/: temperatureplotsettingswidget.cpp  temperatureplotsettingswidget.h  temperatureplotwidget.cpp  temperatureplotwidget.h
test/: -10C.csv  -15C.csv  -20C.csv  -25C.csv  -30C.csv  -35C.csv  -40C.csv  -45C.csv  -5C.csv  0C.csv  10C.csv  15C.csv  20C.csv  25C.csv  30C.csv  35C.csv  40C.csv  45C.csv  50C.csv  55C.csv  5C.csv  60C.csv  65C.csv  70C.csv  q_t.csv
